# libsignal-protocol-c

./: CMakeLists.txt  README.md
CMakeModules/: FindCheck.cmake
src/: group_cipher.c  hkdf.c  protocol.c  protocol.h  session_cipher.c  session_cipher.h  signal_protocol.c  signal_protocol.h  signal_protocol_internal.h
src/protobuf-c/: protobuf-c.c
tests/: CMakeLists.txt  decompose_wire.c  test_common_openssl.c  test_protocol.c  test_session_builder.c  test_simultaneous_initiate.c
